updated exception handline